--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>RAMEN OR DIE</h1>
+    <p>ramen ramen ramen</p>
     <canvas></canvas>
     <script type="text/javascript" src="/JS/script.js"></script>
 </body>
